--- a/Boltzmann_GPU.ipynb
+++ b/Boltzmann_GPU.ipynb
@@ -6,7 +6,7 @@
       "name": "Boltzmann_GPU.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPZPzMVJ2kNT1jCILgKyi77",
+      "authorship_tag": "ABX9TyOry3s/k9JtbARNY/Z4G4Xy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -452,7 +452,7 @@
         "    row = int (id/n_d[0])\r\n",
         "    col = int (id%n_d[0])\r\n",
         "    s=0\r\n",
-        "    if (col < nx and row < ny):\r\n",
+        "    if (col < n_d[0] and row < n_d[1]):\r\n",
         "        if (obstacle[col,row]==True):s = 1\r\n",
         "##Interior Blocks That do not have any boundary issues\r\n",
         "    if (col > 0 and col < n_d[0]-1 and row > 0 and row < n_d[1]-1 and s==0):\r\n",
@@ -515,7 +515,7 @@
         "    cuda.syncthreads()\r\n",
         "\r\n"
       ],
-      "execution_count": 104,
+      "execution_count": 109,
       "outputs": []
     },
     {
