--- a/Boltzmann_GPU.ipynb
+++ b/Boltzmann_GPU.ipynb
@@ -6,7 +6,7 @@
       "name": "Boltzmann_GPU.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMP68oKFYyeRO28MSNtKg5r",
+      "authorship_tag": "ABX9TyMT4Kl/v1ewstyfG67hlITy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +55,7 @@
         "col2 = np.array([3, 4, 5])\r\n",
         "col3 = np.array([6, 7, 8])"
       ],
-      "execution_count": 27,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -87,7 +87,7 @@
         "        feq[i,:,:] = rho*t[i] * (1 + cu + 0.5*cu**2 - usqr)\r\n",
         "    return feq"
       ],
-      "execution_count": 29,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -100,7 +100,7 @@
         "def obstacle_fun(x, y):\r\n",
         "    return (x-cx)**2+(y-cy)**2<r**2"
       ],
-      "execution_count": 30,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -112,7 +112,7 @@
         "def inivel(d, x, y):\r\n",
         "    return (1-d) * uLB * (1 + 1e-4*np.sin(y/ly*2*np.pi))"
       ],
-      "execution_count": 31,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -174,7 +174,7 @@
         "            plt.imshow(np.sqrt(u[0]**2+u[1]**2).transpose(), cmap=cm.Reds)\r\n",
         "            plt.savefig(\"vel.{0:04d}.png\".format(time//100))"
       ],
-      "execution_count": 32,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -252,7 +252,7 @@
         "\r\n",
         "###### Moving needed data to device #################################################\r\n",
         "n_ = [nx,ny]\r\n",
-        "n_d = cuda.to_device(nx_)\r\n",
+        "n_d = cuda.to_device(n_)\r\n",
         "\r\n",
         "o_ = [nx,ny,omega]\r\n",
         "o_d = cuda.to_device(o_)\r\n",
@@ -267,7 +267,7 @@
         "blocks_per_grid = 148\r\n",
         "threads_per_block = 512"
       ],
-      "execution_count": 98,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -282,9 +282,10 @@
         "  y = cuda.blockIdx.x\r\n",
         "  d = cuda.blockDim.x\r\n",
         "  id = y*d + x\r\n",
-        "  row = int (id/n_d[0])\r\n",
-        "  col = int (id%n_d[0])\r\n",
-        "  if (col < n_d[0] and col > 0 and row < n_d[1]):\r\n",
+        "  nx, ny = n_d[0], n_d[1] ## Putting these two values in local memory that way we have faster access when we need them especially for nx since it is accessed at least three times in each kernel \r\n",
+        "  row = int (id/nx)\r\n",
+        "  col = int (id%nx)\r\n",
+        "  if (col < nx and col > 0 and row < ny):\r\n",
         "\r\n",
         "        tmp_1=0\r\n",
         "        tmp_2=0\r\n",
@@ -295,7 +296,7 @@
         "        u[0,col,row] = tmp_1/rho[col,row]\r\n",
         "        u[1,col,row] = tmp_2/rho[col,row]\r\n",
         "  #u[:,0,:] = vel[:,0,:]\r\n",
-        "  elif (col==0 and row < n_d[1]):\r\n",
+        "  elif (col==0 and row < ny):\r\n",
         "          u[0, col, row] = vel[0,col,row]\r\n",
         "          u[1, col, row] = vel[1,col,row]\r\n",
         "\r\n",
@@ -309,10 +310,11 @@
         "    x = cuda.threadIdx.x\r\n",
         "    y = cuda.blockIdx.x\r\n",
         "    d = cuda.blockDim.x\r\n",
+        "    nx, ny = n_d[0], n_d[1]\r\n",
         "    id = y*d + x\r\n",
-        "    row = int(id/n_d[0])\r\n",
-        "    col = int(id%n_d[0])\r\n",
-        "    if (row < n_d[1] and col==n_d[0]-1):\r\n",
+        "    row = int(id/nx)\r\n",
+        "    col = int(id%nx)\r\n",
+        "    if (row < ny and col==nx-1):\r\n",
         "        fin[col3[0],col,row] = fin[col3[0],col-1,row] \r\n",
         "        fin[col3[1],col,row] = fin[col3[1],col-1,row] \r\n",
         "        fin[col3[2],col,row] = fin[col3[2],col-1,row] \r\n",
@@ -328,9 +330,10 @@
         "    y = cuda.blockIdx.x\r\n",
         "    d = cuda.blockDim.x\r\n",
         "    id = y*d + x\r\n",
-        "    row = int(id/n_d[0])\r\n",
-        "    col = int(id%n_d[0])\r\n",
-        "    if (row < n_d[1] and col==0):\r\n",
+        "    nx, ny = n_d[0], n_d[1]\r\n",
+        "    row = int(id/nx)\r\n",
+        "    col = int(id%nx)\r\n",
+        "    if (row < ny and col==0):\r\n",
         "      tmp_1 = fin[col2[0], 0, row] + fin[col2[1], 0, row] + fin[col2[2], 0, row]\r\n",
         "      tmp_2 = fin[col3[0], 0, row] + fin[col3[1], 0, row] + fin[col3[2], 0, row]\r\n",
         "      rho[0,row] = 1/(1-u[0,0,row]) * (tmp_1 + 2*tmp_2)\r\n",
@@ -343,9 +346,10 @@
         "    y = cuda.blockIdx.x\r\n",
         "    d = cuda.blockDim.x\r\n",
         "    id = y*d + x\r\n",
-        "    row = int(id/n_d[0])\r\n",
-        "    col = int(id%n_d[0])\r\n",
-        "    if (col < n_d[0] and row < n_d[1]):\r\n",
+        "    nx, ny = n_d[0], n_d[1]\r\n",
+        "    row = int(id/nx)\r\n",
+        "    col = int(id%nx)\r\n",
+        "    if (col < nx and row < ny):\r\n",
         "        tmp = fin[0,col,row]\r\n",
         "        for i in range(1,9,1):\r\n",
         "#writing into local temporary variables so we don't write into global memory each time, hence this way we save 8 writes to global memory per thread which is very benificial in the long run with 420*180 threads\r\n",
@@ -363,9 +367,10 @@
         "    y = cuda.blockIdx.x\r\n",
         "    d = cuda.blockDim.x\r\n",
         "    id = y*d + x\r\n",
-        "    row = int(id/n_d[0])\r\n",
-        "    col = int(id%n_d[0])\r\n",
-        "    if (row < n_d[1] and col==0):\r\n",
+        "    nx, ny = n_d[0], n_d[1]\r\n",
+        "    row = int(id/nx)\r\n",
+        "    col = int(id%nx)\r\n",
+        "    if (row < ny and col==0):\r\n",
         "      fin[0,0,row] = feq[0,0,row] + fin[8,0,row] - feq[8,0,row]\r\n",
         "      fin[1,0,row] = feq[1,0,row] + fin[7,0,row] - feq[7,0,row]\r\n",
         "      fin[2,0,row] = feq[2,0,row] + fin[6,0,row] - feq[6,0,row]\r\n",
@@ -384,13 +389,14 @@
         "    y = cuda.blockIdx.x\r\n",
         "    d = cuda.blockDim.x\r\n",
         "    id = y*d + x\r\n",
-        "    row = int(id/o_d[0])\r\n",
-        "    col = int(id%o_d[0]) ##and ([col,row] not in obstacle)\r\n",
+        "    nx, ny = o_d[0], o_d[1]\r\n",
+        "    row = int(id/nx)\r\n",
+        "    col = int(id%nx) ##and ([col,row] not in obstacle)\r\n",
         "    s=0\r\n",
-        "    if (col < o_d[0] and row < o_d[1]):\r\n",
+        "    if (col < nx and row < ny):\r\n",
         "        if (obstacle[col,row]==True): s = 1\r\n",
         "\r\n",
-        "    if (col < o_d[0] and row < o_d[1]):\r\n",
+        "    if (col < nx and row < ny):\r\n",
         "      for i in range(9):\r\n",
         "        fout[i,col,row] = fin[i,col,row] - o_d[2]*(fin[i,col,row] - feq[i,col,row])\r\n",
         "\r\n",
@@ -398,7 +404,7 @@
         "            #fout[i, obstacle] = fin[8-i, obstacle]\r\n",
         "            # [col,row] in obstacle\r\n",
         "\r\n",
-        "    elif (col < o_d[0] and row < o_d[1] and s==1):\r\n",
+        "    elif (col < nx and row < ny and s==1):\r\n",
         "        for i in range(9):\r\n",
         "            fout[i, col, row] = fin[8-i, col, row]\r\n",
         "    cuda.syncthreads()\r\n",
@@ -422,17 +428,18 @@
         "    x = cuda.threadIdx.x\r\n",
         "    y = cuda.blockIdx.x\r\n",
         "    d = cuda.blockDim.x\r\n",
+        "    nx, ny = n_d[0], n_d[1]\r\n",
         "    id = y*d + x\r\n",
         "    row = int (id/n_d[0])\r\n",
         "    col = int (id%n_d[0])\r\n",
-        "    if (col < n_d[0] and row < n_d[1]):\r\n",
+        "    if (col < nx and row < ny):\r\n",
         "        usqr = 3/2 * (u[0,col,row]*u[0,col,row] + u[1,col,row]*u[1,col,row])\r\n",
         "        for i in range(9):\r\n",
         "          cu = 3 * (v[i,0]*u[0,col,row] + v[i,1]*u[1,col,row])\r\n",
         "          feq[i,col,row] = rho[col,row]*t[i] * (1 + cu + 0.5*cu*cu - usqr)\r\n",
         "    cuda.syncthreads()"
       ],
-      "execution_count": 103,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -448,14 +455,15 @@
         "    x = cuda.threadIdx.x\r\n",
         "    y = cuda.blockIdx.x\r\n",
         "    d = cuda.blockDim.x\r\n",
+        "    nx, ny = n_d[0], n_d[1]\r\n",
         "    id = y*d + x\r\n",
-        "    row = int (id/n_d[0])\r\n",
-        "    col = int (id%n_d[0])\r\n",
+        "    row = int (id/nx)\r\n",
+        "    col = int (id%nx)\r\n",
         "    s=0\r\n",
-        "    if (col < n_d[0] and row < n_d[1]):\r\n",
+        "    if (col < nx and row < ny):\r\n",
         "        if (obstacle[col,row]==True):s = 1\r\n",
         "##Interior Blocks That do not have any boundary issues\r\n",
-        "    if (col > 0 and col < n_d[0]-1 and row > 0 and row < n_d[1]-1 and s==0):\r\n",
+        "    if (col > 0 and col < nx-1 and row > 0 and row < ny-1 and s==0):\r\n",
         "      fin[0,col,row] = fout[8,col+1,row-1]\r\n",
         "      fin[1,col,row] = fout[7,col+1,row]\r\n",
         "      fin[2,col,row] = fout[6,col+1,row+1]\r\n",
@@ -466,26 +474,26 @@
         "      fin[8,col,row] = fout[0,col-1,row+1]\r\n",
         "\r\n",
         "    #TOP BOUNDARY WITHOUT CORNERS\r\n",
-        "    elif (row==0 and col > 0 and col < n_d[0]-1):\r\n",
+        "    elif (row==0 and col > 0 and col < nx-1):\r\n",
         "        fin[1,col,row] = fout[7,col+1,row]\r\n",
         "        fin[2,col,row] = fout[6,col+1,row+1]\r\n",
         "        fin[5,col,row] = fout[3,col,row+1]\r\n",
         "        fin[7,col,row] = fout[1,col-1,row]\r\n",
         "        fin[8,col,row] = fout[0,col-1,row+1]\r\n",
         "    #BOTTOM BOUNDARY WITHOUT CORNERS\r\n",
-        "    elif (row==n_d[1]-1 and col > 0 and col < n_d[0]-1):\r\n",
+        "    elif (row==ny-1 and col > 0 and col < nx-1):\r\n",
         "        fin[0,col,row] = fout[8,col+1,row-1]\r\n",
         "        fin[1,col,row] = fout[7,col+1,row]\r\n",
         "        fin[3,col,row] = fout[5,col,row-1]\r\n",
         "        fin[6,col,row] = fout[2,col-1,row-1]\r\n",
         "        fin[7,col,row] = fout[1,col-1,row]\r\n",
         "   #LEFT WALL(boundary) WITH CORNERS\r\n",
-        "    elif (col==0 and row<n_d[1]):\r\n",
+        "    elif (col==0 and row<ny):\r\n",
         "      if (row==0):\r\n",
         "        fin[1,col,row] = fout[7,col+1,row]\r\n",
         "        fin[2,col,row] = fout[6,col+1,row+1]\r\n",
         "        fin[5,col,row] = fout[3,col,row+1]\r\n",
-        "      elif row==179:\r\n",
+        "      elif row==ny-1:\r\n",
         "        fin[0,col,row] = fout[8,col+1,row-1]\r\n",
         "        fin[1,col,row] = fout[7,col+1,row]\r\n",
         "        fin[3,col,row] = fout[5,col,row-1]\r\n",
@@ -496,12 +504,12 @@
         "        fin[3,col,row] = fout[5,col,row-1]\r\n",
         "        fin[5,col,row] = fout[3,col,row+1]\r\n",
         "    #RIGHT WALL(boundary) WITH CORNERS\r\n",
-        "    elif (col==n_d[0]-1 and row<n_d[1]):\r\n",
+        "    elif (col==nx-1 and row<ny):\r\n",
         "      if row==0:\r\n",
         "        fin[5,col,row] = fout[3,col,row+1]\r\n",
         "        fin[7,col,row] = fout[1,col-1,row]\r\n",
         "        fin[8,col,row] = fout[0,col-1,row+1]\r\n",
-        "      elif row==179:##\r\n",
+        "      elif row==ny-1:##\r\n",
         "        fin[3,col,row] = fout[5,col,row-1]\r\n",
         "        fin[6,col,row] = fout[2,col-1,row-1]\r\n",
         "        fin[7,col,row] = fout[1,col-1,row]\r\n",
@@ -515,7 +523,7 @@
         "    cuda.syncthreads()\r\n",
         "\r\n"
       ],
-      "execution_count": 109,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -599,7 +607,7 @@
         "            plt.imshow(np.sqrt(u[0]**2+u[1]**2).transpose(), cmap=cm.Reds)\r\n",
         "            plt.savefig(\"vel.{0:04d}.png\".format(time//100))\r\n"
       ],
-      "execution_count": 105,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -640,7 +648,7 @@
         "    fig = px.line(benchmark, x = 'Number_of_Iterations', y = 'Speedup', title = 'Boltzmann Benchmark GPU')\r\n",
         "    fig.show()\r\n"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -786,6 +794,17 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "l25YwPTQinm3"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
