--- a/Boltzmann_GPU.ipynb
+++ b/Boltzmann_GPU.ipynb
@@ -6,7 +6,7 @@
       "name": "Boltzmann_GPU.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMsQAajwpKGFU9pLvqX819h",
+      "authorship_tag": "ABX9TyOdV/dnCtmp3HbtA6BmLBGR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -254,7 +254,7 @@
         "from numba import cuda\r\n",
         "\r\n",
         "\r\n",
-        "###### Moving needed data to device global memory ##################################\r\n",
+        "######### Moving required data to device global memory ##################################\r\n",
         "n_ = [nx,ny]\r\n",
         "n_d = cuda.to_device(n_)\r\n",
         "\r\n",
@@ -272,13 +272,13 @@
       "source": [
         "# GPU programming methods and trials\r\n",
         "\r\n",
-        "Starting out with the gpu_architecture the most import aspects to keep in mind for performance were memory access, management and coalescence.\r\n",
+        "Starting out with GPU basic architecture, the most import aspects to keep in mind for performance were memory access, management and coalescence.\r\n",
         "\r\n",
-        "Starting out, i initially had each step of the sequential algorithm sorted in its own respective kernel. This naive way of gpu programming, although led to some speedup, felt it was missing memory efficiency especially with a local, **embarssingly parallel** algorithm such as Lattice-Boltzmann.\r\n",
+        "I initially had each step of the sequential algorithm sorted in its own respective kernel. This naive way of gpu programming, although led to some speedup, felt was missing memory efficiency especially with a local, **embarssingly parallel** algorithm such as Lattice-Boltzmann.\r\n",
         "\r\n",
         "At the beginning brainstorming stages i had the initial_velocity, feq, obstacle and rho vectors in global GPU memory. Each thread was accessing these global vectors each time it needed to run the kernel, which was not at all memory efficient.\r\n",
         "\r\n",
-        "I later realised that since many componenets of this algorithm are local to each cell of out grid i.e each thread we could group all of the steps before the streaming part in one kernel and eliminate the need of having global vectors for the aforementioned entities.\r\n",
+        "I later realised that since many componenets of this algorithm are local to each cell of out grid i.e with each thread we could group all of the steps prior to the streaming part in one kernel and eliminate the need of having global vectors for the aforementioned arrays.\r\n",
         "\r\n",
         "At the end it proved to be optimal to avoid these global GPU memory accesses and stick to dealing with **local thread variables** as much as possible."
       ]
@@ -325,8 +325,8 @@
         "    x = cuda.threadIdx.x\r\n",
         "    y = cuda.blockIdx.x\r\n",
         "    d = cuda.blockDim.x\r\n",
-        "    nx, ny = n_d[0], n_d[1]# placing nx and ny in local thread memory to have faster access to these two variables since they will heavily be used throughout the various kernel operations\r\n",
-        "    id = y*d + x # id of our thread determining whether it's inside our grid or not \r\n",
+        "    nx, ny = n_d[0], n_d[1]# placing nx and ny in local thread memory to have faster instantaneous access to these two variables since they will heavily be used throughout the various kernel operations\r\n",
+        "    id = y*d + x # id of our thread determining whether it's inside our BOLTZMANN grid or not \r\n",
         "    row = int (id/nx)\r\n",
         "    col = int (id%nx)\r\n",
         "    \r\n",
@@ -345,7 +345,8 @@
         "                fin[i,col,row] = fin[i,col-1,row] \r\n",
         "\r\n",
         "        # Calculating the macroscopic variables rho, u_0 and u_1 which are distinct to each cell and thus are local thread variables \r\n",
-        "        rho = 0    \r\n",
+        "        rho = 0   # Since rho is respective to each cell by itself and is not impacted by neighboring cells in any way, it was chosen to keep this variable local to each thread and not store in global memory, this saved \r\n",
+        "        #a lot of memory accsesses in the long run, especially that the rho value will be needed in the following calculations of our kernel\r\n",
         "        u_0 = 0\r\n",
         "        u_1 = 0\r\n",
         "        for i in range(9):\r\n",
@@ -362,10 +363,11 @@
         "            u_1 = 0\r\n",
         "            for i_1, i_2 in zip(col2, col3):\r\n",
         "                rho += fin[i_1,col,row] + 2*fin[i_2,col,row]\r\n",
-        "            rho *= 1/(1-u_0)\r\n",
+        "            rho = rho*(1/(1-u_0))\r\n",
         "        \r\n",
         "        # update fluid propagation\r\n",
         "        u[0,col,row], u[1,col,row] = u_0, u_1\r\n",
+        "\r\n",
         "        # Getting each thread's respective feq belonging to one cycle at a time\r\n",
         "        for i in range(9):\r\n",
         "            cu = 3 * (v[i,0]*u_0 + v[i,1]*u_1)\r\n",
@@ -375,7 +377,7 @@
         "        if col == 0 :\r\n",
         "            for i in range(3):\r\n",
         "                fin[i,col,row] = feq[i] + fin[8-i,col,row] - feq[8-i]\r\n",
-        "        # collision computing\r\n",
+        "        # Computing Fout resulting from the collision step\r\n",
         "        for i in range(9):\r\n",
         "            fout[i,col,row] = fin[i,col,row] - omega * (fin[i,col,row] - feq[i])\r\n",
         "            \r\n",
@@ -648,12 +650,12 @@
         "id": "HA3Qj1zYSaFv"
       },
       "source": [
-        "As we can see starting out with few number of iterations, due to the just in time compilation of numba, the gpu version is not that much faster than the sequential CPU version. \r\n",
+        "As we can see starting out with few number of iterations, due to the just in time compilation of numba, the gpu version isn't reaching its expected potential speedup as compared to the sequential CPU version \r\n",
         "\r\n",
         "As the number of iterations performed increases we can notice that the speedup increases accordingly until it hits a plateau at around 1000 iterations.\r\n",
         "What is noticeable however is the time saved due to the GPU especially for longer cycles.\r\n",
         "\r\n",
-        "This could dramatically help in accelerating simulations of Boltzmann Computational Fluid dynamics in experimental laboratory scenarios."
+        "This could dramatically help in accelerating simulations of Boltzmann Computational Fluid dynamics needs in experimental laboratory scenarios."
       ]
     },
     {
@@ -847,7 +849,16 @@
       },
       "source": [
         "#  Conclusion\r\n",
-        "\r\n"
+        "\r\n",
+        "Gpu programmming can be very benificial in circumstances where calculations are defined in a ***local hierarchy*** and an **embarrasingly parallel** manner i.e where there is little or no dependency or need for communication between parallel tasks, or for results between them.\r\n",
+        "\r\n",
+        "For these specific reasons, we were able to witness speedups of up to ***43x*** with the paralellisation of the Lattice-Boltzmann algorithm.\r\n",
+        "\r\n",
+        "The only major obstacle we faced which hindered our full potential performance was the need of threads communicating with neighboring cells in order to receive their exiting vector values(fout) during the streaming step of the algorithm.\r\n",
+        "\r\n",
+        "Nevertheless, with time savings of more than ***1.5 hours*** for 200,000 iterations we can definitely say tht paralellising this code was worthwhile and the GPU requirements needed to perform such paralellisation proved to be advantageous.\r\n",
+        "\r\n",
+        "It is safe to say that it would be potentially even more rewarding with a larger sized grid (> 420x180)."
       ]
     }
   ]
